compiler/testData/diagnostics/tests/substitutions/kt1558-short.kt

fun testArrays(ci : List<Int>) {
    ci.toArray<Int>(<!UNRESOLVED_REFERENCE!>x<!>)
}